src/objects/Program_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Back Bar/Bar Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couponing Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couponing FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couponing in Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couponing in Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispense Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display In-Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Out of Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display VAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature/Suggested On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer/Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Bar Nights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sampling Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menu/Signature Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS Merchandising</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_to_Action__c</fullName>
        <label>Call to Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <formula>Program__r.End_Date__c</formula>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <formula>Program__r.Id</formula>
        <label>Program ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <formula>Program__r.Start_Date__c</formula>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <formula>TEXT(Program__r.Type__c)</formula>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Program Activities</relationshipLabel>
        <relationshipName>Program_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Activity</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>